implement get matches handler
